# Neko-Chan2

./: .env.prod  .gitignore  README.md  bot.py  config.py  pyproject.toml
assets/: 0930-YuukiAsuna.txt
assets/calendar/: 0101-Compilation.txt  0101-IchinoseHaru.txt  0101-KadotaniAnzu.txt  0101-KurozawaDia.txt  0101-SatonakaChie.txt  0101-ShinodaHajime.txt  0103-Compilation.txt  0103-Homura.txt  0104-Compilation.txt  0104-MinagiHiyori.txt  0107-HimeragiYukina.txt  0108-ShibasakiKazuha.txt  0109-Compilation.txt  0111-MiniwaTsumiki.txt  0113-Compilation.txt  0113-IrisuMakina.txt  0114-ShirokaneGinka.txt  0115-AkiyamaMio.txt  0116-FelixArgyle.txt  0117-Compilation.txt  0117-Kay.txt  0117-KoizumiHanayo.txt  0117-MochizukiMomiji.txt  0120-Compilation.txt  0120-WienMargarete.txt  0122-Compilation.txt  0123-Compilation.txt  0123-NakasuKasumi.txt  0123-TakimotoHifumi.txt  0124-Echidna.txt  0127-NaruseMio.txt  0128-IrizakiMei.txt  0130-Compilation.txt  0131-Compilation.txt  0131-KasumigaokaUtaha.txt  0131-Katyusha.txt  0201-Compilation.txt  0201-ShiinaMayuri.txt  0201-YukimiKoume.txt  0202-Compilation.txt  (+480 more)
assets/sword_art_online/: 221202.txt  221204.txt  221208.txt  221214.txt  221221.txt  221223.txt  221227.txt  221231.txt  230104.txt  230331.txt  230408.txt  230612.txt  231015.txt  231016.txt  231017.txt  231018.ttx  231224.txt  240223.txt  240306.txt  240411.txt
dpl/plugins/: duplication.py
src/: utils.py
src/plugins/: 114514.py  AnimeReminder.py  BecomeHuman.py  Calendar.py  CatBrige.py  Copper.py  Duplicator.py  Kawaii.py  Kfc.py  KfcBrige.py  MaunalIntelligent.py  (+6 more)
