[tool.poetry]
name = "Neko-Chan"
version = "0.1.0"
description = "Neko-Chan"
authors = ["Qzlzdy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["src/plugins"]
adapters = [{name = "mirai2", module_name = "nonebot.adapters.mirai2", project_link = "nonebot_adapter_mirai2", desc = "为 nonebot2 添加 mirai_api_http2.x的兼容适配器"}]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
